# mory

./: .dockerignore  .env.example  .gitignore  API.md  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  go.mod  go.sum  main.py  mcp_main.py  migrate_embeddings.go  pyproject.toml  start_mcp.sh  test_hooks.txt
.github/: dependabot.yml
.github/workflows/: beaver.yml  ci.yml  pr-checks.yml  release.yml
app/: __init__.py  main.py  mcp_server.py
app/api/: __init__.py  dashboard.py  health.py  memories.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  memory.py  schemas.py
app/services/: __init__.py  embedding.py  search.py  summarization.py
app/templates/: dashboard.html
cmd/migrate/: main.go
cmd/mory/: main.go  main_test.go
cmd/sqlite-demo/: main.go
docs/: QUICKSTART.md
internal/config/: config.go  config_test.go  paths.go  paths_test.go
internal/mcp/: server.go  server_test.go
internal/memory/: factory.go  factory_test.go  migration.go  migration_test.go  schema.sql  search.go  search_test.go  sqlite_store.go  sqlite_store_test.go  store.go  store_extended_test.go  store_test.go  store_test_additional.go  types.go  types_test.go
internal/obsidian/: generator.go  generator_test.go  importer.go  importer_test.go  parser.go  parser_test.go  templates.go
internal/semantic/: embedding.go  embedding_test.go  search.go  search_test.go  vector_store.go  vector_store_test.go
mory-python/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mory-python/src/mory/: __init__.py  main.py  memory.py  server.py  storage.py
mory-python/tests/: __init__.py  test_compatibility.py
mory-server/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  start_mcp.sh
mory-server/app/: main.py  mcp_server.py
mory-server/app/api/: health.py  memories.py
mory-server/app/core/: config.py  database.py
mory-server/app/models/: memory.py  schemas.py
mory-server/scripts/: migrate_cli_to_server.py  monitor.py
mory-server/tests/: __init__.py  test_health.py  test_memories_api.py
scripts/: __init__.py  backup.py  deploy.sh  generate_missing_embeddings.py  migrate_to_simplified_schema.py  mory-server.service  pre-commit  regenerate_tags_and_summaries.py  remove_embedding_hash.py  setup-hooks.sh
src/mory/: main.py  memory.py  server.py  storage.py
test/: detailed_search_test.py  final_search_test.py  keyword_search_test.py  test_mcp_protocol.py  test_mcp_search.py
tests/: conftest.py  test_memories_api.py  test_memory_api_optimization.py  test_memory_with_summary.py  test_search_api.py  test_summarization.py
tests-python/: test_compatibility.py
tests/utils/: assertions.py  factories.py  mocks.py
